--- a/assets/css/design-workflow-white.css
+++ b/assets/css/design-workflow-white.css
@@ -279,7 +279,6 @@ p, h1, h2, h3, h4, h5, h6 {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 24px;
-  margin-bottom: 16px;
 }
 
 .blog-post-section-text {
@@ -424,9 +423,40 @@ p, h1, h2, h3, h4, h5, h6 {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 16px;
+  margin-bottom: 32px;
 }
 
 .rating-section {
+  margin-top: 32px;
   border-bottom: 1px solid #EAEBF0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
 }
 
+.rating-section p {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.last {
+  border-bottom: 0px;
+}
+
+.contact-us-section {
+  padding-inline: 16px;
+  padding-block: 32px;
+  border-radius: 10px;
+  background-color: #F8F9FB;
+}
+
+
+.contact-us-section-text h4 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: -0.10000000149011612px;
+  color: #437EF7;
+  margin-bottom: 8px;
+}
